# stock

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  HANDOVER.md  README.md  pyproject.toml  requirements-cloud.txt  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: code-reviewer.md  data-integrity-auditor.md  security-auditor.md  strategy-tester.md  ux-reviewer.md
.claude/hooks/: pre-commit.md
.claude/skills/: add-collector.md  add-indicator.md  add-test.md  backup-restore.md  db-migration.md  fix-yfinance.md  paper-trading.md  release-phase.md  security-check.md  update-ui-page.md
.github/workflows/: briefing-0700.yml  briefing-0930.yml  briefing-1200.yml  briefing-1430.yml  briefing-1600.yml  briefing-1800.yml  briefing-2330.yml  db-backup-weekly.yml  keepalive-weekly.yml  lint.yml  test.yml
.streamlit/: config.toml  secrets.toml.example
docs/: API_GUIDE.md  ARCHITECTURE.md  BACKTEST.md  COSTS.md  DATA_FALLBACK.md  DB_PERSISTENCE.md  DEPLOYMENT.md  DISCLAIMER.md  GLOSSARY.md  INDICATORS.md  NOTIFICATIONS.md  PAPER_TRADING.md  ROADMAP.md  SECURITY.md  SIGNALS.md  TESTING.md  TROUBLESHOOTING.md  UI_GUIDE.md  WORKFLOWS.md
scripts/: briefing_cli.py
src/: __init__.py
src/backtest/: __init__.py  engine.py  lookahead_guard.py  metrics.py  out_of_sample.py  survivorship_filter.py  walk_forward.py
src/collectors/: __init__.py  base.py  cache.py  fundamentals.py  fx.py  kr.py  macro.py  mock.py  news.py  us.py
src/config/: __init__.py  constants.py  (+1 more)
tests/: conftest.py  test_symbols_master.py  test_symbols_refresh.py
(+111 files in other folders)
