[project]
name = "swing-advisor"
version = "0.1.0"
description = "한국+미국 스윙 트레이딩 보조 (페이퍼 트레이딩 전용)"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "swing-advisor user", email = "user@local" }]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "build", "dist", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
exclude = ['build/', 'dist/', '\.venv/', 'site-packages/']
follow_imports = "silent"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/ui/*"]
